--- a/sass/partials/_slides.scss
+++ b/sass/partials/_slides.scss
@@ -7,7 +7,10 @@
                 naming-states, markup-states, control-markup, template-files, template-variables-renders,
                 preprocess-functions, preprocess-function-names, attributes-array,
                 title-attributes-array, classes-array, render-array-attributes, theme-functions,
-                theme-breadcrumb, theme-feed-icon, gesso, clean-markup-module, final {
+                theme-breadcrumb, theme-feed-icon, gesso, clean-markup-module, use-partials, partials-code,
+                partials-directory, partials-global, global-details, global-details-alt, partials-base,
+                base-details, partials-helper-classes, partials-layout, partials-components, components-details,
+                components-details-alt, partials-quick-fixes, final {
   .impress-on-#{$slide} .show-on-#{$slide} {
     opacity: 1;
   }
@@ -17,7 +20,7 @@
 }
 
 // Special styling for Section Headers.
-@each $slide in css-guidelines, control-markup {
+@each $slide in css-guidelines, control-markup, sass-organization {
   .impress-on-#{$slide} {
     @extend %bg-secondary;
   }
